[package]
name = "service_bus"
version = "0.1.2"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A service bus backed by a seda bus intelligently routing messages between services."
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/service-bus"
repository = "https://github.com/resolvingarchitecture/service-bus"
publish = true
readme = "README.md"
keywords = ["service","micro-service","service-bus"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"

ra_common = "0.1.1"
seda_bus = "0.1.8"


[dev-dependencies]
assert_cmd = "0.10"